GNOME Bugzilla – Bug 759743
dashdemux: getting clock compensation using HTTP HEAD uses an incorrect year
Last modified: 2015-12-28 12:13:22 UTC
In function gst_dash_demux_parse_http_head: gst_date_time_new wants the year between 1 and 9999. https://tools.ietf.org/html/rfc822#section-5 provides it as 2 digits. We need to convert from 2 digit to 4 digit.
Created attachment 317742 [details] [review] proposed patch
This is obsoleted by https://tools.ietf.org/html/rfc2822#section-3.3 Still we probably need to be able to handle 2 digit years (obs-year) and 4 digit years, even if people using software that still uses 2 digit years should probably not be allowed on the Internet anymore.
Created attachment 317779 [details] [review] proposed patch updated code and comments to refer to RFC5822
Created attachment 317780 [details] [review] removed some unnecessary space trimming
commit ef06d2a855def91f3f265ad540f965e0689b97ea Author: Florin Apostol <florin.apostol@oregan.net> Date: Tue Dec 22 11:23:19 2015 +0000 dashdemux: removed unnecessary space trimming in gst_dash_demux_parse_http_head sscanf has removed all spaces when it has constructed zone string. There is no need to search for leading spaces. https://bugzilla.gnome.org/show_bug.cgi?id=759743 commit 09b21eacae9abda0f287171d86a08b0f4cf95b5d Author: Florin Apostol <florin.apostol@oregan.net> Date: Mon Dec 21 14:50:15 2015 +0000 dashdemux: accept 2 or 4 digit year when using HTTP HEAD for calculating clock compensation Convert year from 2 digits to 4 digits in gst_dash_demux_parse_http_head https://bugzilla.gnome.org/show_bug.cgi?id=759743 Also updated references to Rfc822 to Rfc5322