dashdemux: accept 2 or 4 digit year when using HTTP HEAD for calculating clock compensation

Convert year from 2 digits to 4 digits in gst_dash_demux_parse_http_head

https://bugzilla.gnome.org/show_bug.cgi?id=759743

Also updated references to Rfc822 to Rfc5322